--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sprint 2 Cafe</title>
+  <title>Spirit 2 Cafe</title>
   <meta name="author" content="Shemaiah OBard"/>
-  <meta description="The coffee shop where you can come to let go and relax. Let all your problems fade away with the worlds best coffee" keywords="best coffee shop relax"/>
+  <meta name="description" content="The coffee shop where you can come to let go and relax. Let all your problems fade away with the worlds best coffee"/>
+  <meta name="keywords" content="best, coffee, shop, relax"/>
   <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
