--- a/index.html
+++ b/index.html
@@ -14,15 +14,48 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <div class="page">
-<header class="header"></header>
+
+<header class="header">
+  <nav class="nav">
+   <img src="./images/logo_coffeeshop_dark.svg" alt="Triple Espresso" class="nav__logo"/>
+    <ul class="nav__links">
+      <li>
+       <a href="#recipes" class="nav__link">Recipes</a>
+      </li>
+      <li>
+       <a href="#bookatable" class="nav__link">Book a table</a>
+      </li>
+      <li>
+        <a href="menu" class="nav__link">Menu</a>
+      </li>
+      <li>
+        <a href="#contacts" class="nav__link">Contacts</a>
+      </li>
+     </ul>
+    </nav>
+    <h1 class="header__title"><span class="header__span-accent">Specialty coffee</span>in the Triple Peaks Library</h1>
+      <p class="header__paragraph">Welcome to our study zone! We've got the coffee to energize you and the cozy vibes to help you get creative.</p>
+       <img src="./images/inside_coffee_shop.png" alt="Blue Coffee Shop" class="header__image"/>
+  <footer class="header__footer">
+    <div class="header__footer-description-hours">
+      <p class="header__footer-description">Hours:</p>
+      <p class="header__footer-description">Monday – Friday (10:00 – 19:00)</p>
+      <p class="header__footer-description">Saturday – Sunday (11:00 – 18:00)</p>
+      </div>
+      <p class="header__footer-description">200 Success Avenue, The Town of Triple Peaks</p>
+</footer>
+</header>
+
 <main class="content">
   <section class="recipes"></section>
   <section class="reservation"></section>
   <section class="menu"></section>
   <section class="about"></section>
 </main>
+
 <footer class="footer"></footer>
   </div>
 </body>
