--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     <h1 class="header__title"><span class="header__span-accent">Specialty coffee</span>in the Triple Peaks Library</h1>
       <p class="header__paragraph">Welcome to our study zone! We've got the coffee to energize you and the cozy vibes to help you get creative.</p>
        <img src="./images/inside_coffee_shop.png" alt="Blue Coffee Shop" class="header__image"/>
-  <footer class="header__footer">
+  <div class="header__footer">
     <div class="header__footer-description-hours">
       <p class="header__footer-description">Hours:</p>
       <p class="header__footer-description">Monday – Friday (10:00 – 19:00)</p>
       <p class="header__footer-description">Saturday – Sunday (11:00 – 18:00)</p>
       </div>
       <p class="header__footer-description">200 Success Avenue, The Town of Triple Peaks</p>
-</footer>
+    </div>
 </header>
 
 <main class="content">
