--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
        <a href="#recipes" class="nav__link">Recipes</a>
       </li>
       <li>
-       <a href="#bookatable" class="nav__link">Book a table</a>
+       <a class="nav__link">Book a table</a>
       </li>
       <li>
-        <a href="menu" class="nav__link">Menu</a>
+        <a class="nav__link">Menu</a>
       </li>
       <li>
-        <a href="#contacts" class="nav__link">Contacts</a>
+        <a class="nav__link">Contacts</a>
       </li>
      </ul>
     </nav>
     <h1 class="header__title"><span class="header__span-accent">Specialty coffee</span>in the Triple Peaks Library</h1>
-      <p class="header__paragraph">Welcome to our study zone! We've got the coffee to energize you and the cozy vibes to help you get creative.</p>
+      <p class="header__description">Welcome to our study zone! We've got the coffee to energize you and the cozy vibes to help you get creative.</p>
        <img src="./images/inside_coffee_shop.png" alt="Blue Coffee Shop" class="header__image"/>
   <div class="header__footer">
     <div class="header__footer-description-hours">
@@ -55,13 +55,13 @@
       <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:</p>
       <ul class="recipes__videos">
       <li>
-      <iframe width="480" height="273" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=U-fEe7zeBBy9caHD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe class="recipes__iframe" width="480" height="273" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=U-fEe7zeBBy9caHD" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
       <p class="recipes__video-caption">
         <span>Aeropress recipe</span>
         <span>~5 min</span></p>
       </li>
        <li>
-      <iframe width="480" height="273" src="https://www.youtube.com/embed/st571DYYTR8?si=5E32Kmyy7plJwlQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe class="recipes__iframe" width="480" height="273" src="https://www.youtube.com/embed/st571DYYTR8?si=5E32Kmyy7plJwlQU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <p class="recipes__video-caption">
         <span>French press recipe</span>
         <span>~15 min</span></p>
@@ -69,9 +69,9 @@
       </ul>
     </div>
   </section>
-  <section id="reservation" class="reservation"></section>
-  <section id="menu" class="menu"></section>
-  <section id="about" class="about"></section>
+  <section class="reservation"></section>
+  <section class="menu"></section>
+  <section class="about"></section>
 </main>
 
 <footer class="footer"></footer>
