--- a/index.html
+++ b/index.html
@@ -71,35 +71,33 @@
   </section>
 
   <section class="reservation">
-    <div class="reservation__content">
       <h2 class="reservation__title">Book a table</h2>
        <form class="reservation__form form">
         <fieldset class="form__fieldset">
-          <lable class="form__label">Name *
-            <input required class="form__input" type="text" placeholder="Name Surname">
+          <lable class="form__label" for="name-input">Name *
+            <input class="form__input" type="text" placeholder="Name Surname" id="name-input" required>
           </lable>
 
-          <lable class="form__label">Number of guest *
-            <input required class="form__input" type="number" placeholder="1-8" min="1" max="8">
+          <lable class="form__label" for="guest-input">Number of guest *
+            <input class="form__input" type="number" placeholder="1-8" min="1" max="8" id="guest-input" required>
           </lable>
 
-          <lable class="form__label">Date & time *
-            <input required class="form__input" type="datetime-local">
+          <lable class="form__label" for="date/time-input">Date & time *
+            <input class="form__input" type="datetime-local" id="date/time-input" required>
           </lable>
 
-          <lable class="form__label">Your email *
-            <input required class="form__input" type="email" placeholder="email@email.com">
+          <lable class="form__label" for="email-input">Your email *
+            <input class="form__input" type="email" placeholder="email@email.com" id="email-input" required>
           </lable>
         </fieldset>
 
            <button class="form__button" type="submit">Book a table</button>
-          <lable class="form__label">
-            <input required class="form__input" type="checkbox" name="I agree with terms of use">
+          <lable class="form__label form__label_type_checkbox" for="terms-input">
+            <input class="form__checkbox" type="checkbox" name="I agree with terms of use" id="terms-input" required>
           I agree with terms of use
           </lable>
 
     </form>
-  </div>
   </section>
 
   <section class="menu"></section>
