--- a/index.html
+++ b/index.html
@@ -100,22 +100,63 @@
 
   <section id="menu" class="menu">
     <h2 class="menu__title">Menu</h2>
-    <h3 class="menu__subtitle">We brew coffee from locally roasted, Fairtrade certified beans and use biodegradable cups. All teas from our collection are $2/cup.</h3>
+    <p class="menu__subtitle">We brew coffee from locally roasted, Fairtrade certified beans and use biodegradable cups. All teas from our collection are $2/cup.</p>
     <ul class="menu__cards">
-      <li class="card__list-item">
-        <span class="card__filter">Filter</span>
-        <span class="card__list-item"></span>
-        <span class="card__list-divider"></span>
-      </li>
-        <li class="card__list-item">
-        <span class="card__filter">Espresso</span>
-        <span class="card__list-item"></span>
-        <span class="card__list-divider"></span>
-      </li>
-        <li class="card__list-item">
-        <span class="card__filter">Baked Goods</span>
-        <span class="card__list-item"></span>
-        <span class="card__list-divider"></span>
+      <li class="card">
+        <h3 class="card__title">Filter</h3>
+          <ul class="card__list">
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+               <li class="card">
+        <h3 class="card__title">Espresso</h3>
+          <ul class="card__list">
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+               <li class="card">
+        <h3 class="card__title">Baked Goods</h3>
+          <ul class="card__list">
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+            <li class="card__list-item">
+              Regular (12oz) <span class="card__list-divider"></span> $1
+            </li>
+        </ul>
       </li>
     </ul>
   </section>
