--- a/index.html
+++ b/index.html
@@ -109,54 +109,54 @@
               Regular (12oz) <span class="card__list-divider"></span> $1
             </li>
             <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
+              Large (16oz) <span class="card__list-divider"></span> $1.25
             </li>
             <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
+              XL (20oz) <span class="card__list-divider"></span> $1.50
             </li>
             <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
+              Party-size (24oz, decaf) <span class="card__list-divider"></span> $1.75
             </li>
             <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
+              Iced Coffee (16oz) <span class="card__list-divider"></span> $1.25
             </li>
           </ul>
                <li class="card">
         <h3 class="card__title">Espresso</h3>
           <ul class="card__list">
             <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
+              Macchiato <span class="card__list-divider"></span> $2.25
             </li>
             <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
+              Cortado <span class="card__list-divider"></span> $2.50
             </li>
             <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
+              Mocha <span class="card__list-divider"></span> $3
             </li>
             <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
-            </li>
-            <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
+              Sunrise in the Bay Area (decaf) <span class="card__list-divider"></span> $10
             </li>
           </ul>
                <li class="card">
         <h3 class="card__title">Baked Goods</h3>
           <ul class="card__list">
             <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
+              Almond Croissant <span class="card__list-divider"></span> $2
             </li>
             <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
+              Banana Bread <span class="card__list-divider"></span> $1.75
             </li>
             <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
+              Key Lime Pie <span class="card__list-divider"></span> $3
             </li>
             <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
+              Blue Velvet Cake <span class="card__list-divider"></span> $3.75
             </li>
             <li class="card__list-item">
-              Regular (12oz) <span class="card__list-divider"></span> $1
+              Web Cookie <span class="card__list-divider"></span> $2
+            </li>
+            <li class="card__list-item">
+              Fresh Bug'uette <span class="card__list-divider"></span> $0.25
             </li>
         </ul>
       </li>
