--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 
   <section id="menu" class="menu">
     <h2 class="menu__title">Menu</h2>
-    <p class="menu__subtitle">We brew coffee from locally roasted, Fairtrade certified beans and use biodegradable cups. All teas from our collection are $2/cup.</p>
+    <p class="menu__subtitle">
+      We brew coffee from locally roasted, Fairtrade certified beans and use biodegradable cups. All teas from our collection are $2/cup.</p>
     <ul class="menu__cards">
       <li class="card">
         <h3 class="card__title">Filter</h3>
@@ -119,9 +120,12 @@
             </li>
             <li class="card__list-item">
               Iced Coffee (16oz) <span class="card__list-divider"></span> $1.25
-            </li>
-          </ul>
-               <li class="card">
+              </li>
+            </ul>
+          </li>
+
+
+          <li class="card">
         <h3 class="card__title">Espresso</h3>
           <ul class="card__list">
             <li class="card__list-item">
@@ -136,8 +140,10 @@
             <li class="card__list-item">
               Sunrise in the Bay Area (decaf) <span class="card__list-divider"></span> $10
             </li>
-          </ul>
-               <li class="card">
+           </ul>
+          </li>
+
+          <li class="card">
         <h3 class="card__title">Baked Goods</h3>
           <ul class="card__list">
             <li class="card__list-item">
