--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
        <a href="#reservation" class="nav__link">Book a table</a>
       </li>
       <li>
-        <a>Menu</a>
+        <a href="#menu" class="nav__link">Menu</a>
       </li>
       <li>
-        <a>Contacts</a>
+        <a href="#contacts" class="nav__link">Contacts</a>
       </li>
      </ul>
     </nav>
@@ -179,7 +179,34 @@
   </section>
 </main>
 
-<footer class="footer"></footer>
+<footer id="contacts" class="footer">
+  <div class="footer__content">
+    <img src="./images/logo_coffeeshop_light.svg" alt="Triple Peaks logo" class="footer__logo"/>
+
+    <div class="footer__social">
+        <h3 class="footer__social-heading">Social Media</h3>
+          <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="#" class="footer__social-link">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="Facebook icon"
+                    class="footer__social-icon"/>
+                  Facebook</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__social-link">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="Instagram icon"
+                    class="footer__social-icon"/>
+                  Instagram</a>
+              </li>
+          </ul>
+      </div>
+     </div>
+  <p class="footer__copyright">&copy; 2025 Shemaiah OBard</p>
+</footer>
     </div>
   </body>
 </html>
