--- a/index.html
+++ b/index.html
@@ -73,24 +73,24 @@
       <h2 class="reservation__title">Book a table</h2>
        <form class="reservation__form form">
         <fieldset class="form__fieldset">
-          <lable class="form__label" for="name-input">Name *
+          <label class="form__label" for="name-input">Name *
             <input class="form__input" type="text" placeholder="Name Surname" id="name-input" required>
-          </lable>
-          <lable class="form__label" for="guest-input">Number of guest *
+          </label>
+          <label class="form__label" for="guest-input">Number of guest *
             <input class="form__input" type="number" placeholder="1-8" min="1" max="8" id="guest-input" required>
-          </lable>
-          <lable class="form__label" for="date/time-input">Date & time *
+          </label>
+          <label class="form__label" for="date/time-input">Date & time *
             <input class="form__input" type="datetime-local" id="date/time-input" required>
-          </lable>
-          <lable class="form__label" for="email-input">Your email *
+          </label>
+          <label class="form__label" for="email-input">Your email *
             <input class="form__input" type="email" placeholder="email@email.com" id="email-input" required>
-          </lable>
+          </label>
         </fieldset>
            <button class="form__button" type="submit">Book a table</button>
-          <lable class="form__label form__label_type_checkbox" for="terms-input">
+          <label class="form__label form__label_type_checkbox" for="terms-input">
             <input class="form__checkbox" type="checkbox" name="I agree with terms of use" id="terms-input" required>
           I agree with terms of use
-          </lable>
+          </label>
     </form>
   </section>
 
@@ -174,8 +174,8 @@
         Besides that, we try to reduce our environmental impact — so we don't sell single-use cups. But you can buy one of our reusable cups!
       </p>
     </div>
+    <div class="about__circle"></div>
     <div class="about__circle about__circle_animation_blurred"></div>
-
   </section>
 </main>
 
