--- a/index.html
+++ b/index.html
@@ -1,71 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spirit 2 Cafe</title>
-  <meta name="author" content="Shemaiah OBard"/>
-  <meta name="description" content="The coffee shop where you can come to let go and relax. Let all your problems fade away with the worlds best coffee"/>
-  <meta name="keywords" content="best, coffee, shop, relax"/>
-  <link rel="stylesheet" href="./pages/index.css">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-</head>
+  <head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Spirit 2 Cafe</title>
+   <meta name="author" content="Shemaiah OBard"/>
+   <meta name="description" content="The coffee shop where you can come to let go and relax. Let all your problems fade away with the worlds best coffee"/>
+   <meta name="keywords" content="best, coffee, shop, relax"/>
+   <link rel="stylesheet" href="./pages/index.css">
+   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  </head>
 
-<body>
-  <div class="page">
-<header class="header">
-  <nav class="nav">
-   <img src="./images/logo_coffeeshop_dark.svg" alt="Triple Espresso" class="nav__logo"/>
-    <ul class="nav__links">
-      <li>
-       <a href="#recipes" class="nav__link">Recipes</a>
-      </li>
-      <li>
-       <a href="#reservation" class="nav__link">Book a table</a>
-      </li>
-      <li>
-        <a href="#menu" class="nav__link">Menu</a>
-      </li>
-      <li>
-        <a href="#contacts" class="nav__link">Contacts</a>
-      </li>
-     </ul>
-    </nav>
-    <h1 class="header__title"><span class="header__span-accent">Specialty coffee</span>in the Triple Peaks Library</h1>
-      <p class="header__description">Welcome to our study zone! We've got the coffee to energize you and the cozy vibes to help you get creative.</p>
-       <img src="./images/inside_coffee_shop.png" alt="Blue Coffee Shop" class="header__image"/>
-  <div class="header__footer">
-    <div class="header__footer-description-hours">
-      <p class="header__footer-description">Hours:</p>
-      <p class="header__footer-description">Monday – Friday (10:00 – 19:00)</p>
-      <p class="header__footer-description">Saturday – Sunday (11:00 – 18:00)</p>
+  <body>
+   <div class="page">
+    <header class="header">
+     <nav class="nav">
+      <img src="./images/logo_coffeeshop_dark.svg" alt="Triple Espresso" class="nav__logo"/>
+       <ul class="nav__links">
+        <li>
+         <a href="#recipes" class="nav__link">Recipes</a>
+        </li>
+        <li>
+         <a href="#reservation" class="nav__link">Book a table</a>
+        </li>
+        <li>
+         <a href="#menu" class="nav__link">Menu</a>
+        </li>
+        <li>
+         <a href="#contacts" class="nav__link">Contacts</a>
+        </li>
+       </ul>
+     </nav>
+      <h1 class="header__title"><span class="header__span-accent">Specialty coffee</span>in the Triple Peaks Library</h1>
+       <p class="header__description">Welcome to our study zone! We've got the coffee to energize you and the cozy vibes to help you get creative.</p>
+        <img src="./images/inside_coffee_shop.png" alt="Blue Coffee Shop" class="header__image"/>
+      <div class="header__footer">
+      <div class="header__footer-description-hours">
+       <p class="header__footer-description">Hours:</p>
+       <p class="header__footer-description">Monday – Friday (10:00 – 19:00)</p>
+       <p class="header__footer-description">Saturday – Sunday (11:00 – 18:00)</p>
       </div>
-      <p class="header__footer-description">200 Success Avenue, The Town of Triple Peaks</p>
-    </div>
-</header>
+       <p class="header__footer-description">200 Success Avenue, The Town of Triple Peaks</p>
+      </div>
+    </header>
 
 <main class="content">
   <section id="recipes" class="recipes">
     <div class="recipes__content">
       <h2 class="recipes__title">Recipes</h2>
-      <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:</p>
-      <ul class="recipes__videos">
-      <li>
-      <iframe class="recipes__iframe" width="480" height="273" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=U-fEe7zeBBy9caHD" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
-      <p class="recipes__video-caption">
-        <span>Aeropress recipe</span>
-        <span>~5 min</span></p>
-      </li>
-       <li>
-      <iframe class="recipes__iframe" width="480" height="273" src="https://www.youtube.com/embed/st571DYYTR8?si=5E32Kmyy7plJwlQU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      <p class="recipes__video-caption">
-        <span>French press recipe</span>
-        <span>~15 min</span></p>
-      </li>
-      </ul>
+       <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:</p>
+        <ul class="recipes__videos">
+         <li>
+          <iframe class="recipes__iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=U-fEe7zeBBy9caHD" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
+          <p class="recipes__video-caption">
+           <span>Aeropress recipe</span>
+           <span>~5 min</span></p>
+         </li>
+         <li>
+          <iframe class="recipes__iframe" src="https://www.youtube.com/embed/st571DYYTR8?si=5E32Kmyy7plJwlQU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <p class="recipes__video-caption">
+           <span>French press recipe</span>
+           <span>~15 min</span></p>
+         </li>
+        </ul>
     </div>
   </section>
 
@@ -117,8 +117,8 @@
             <li class="card__list-item">
               Iced Coffee (16oz) <span class="card__list-divider"></span> $1.25
               </li>
-            </ul>
-          </li>
+          </ul>
+       </li>
           <li class="card">
         <h3 class="card__title">Espresso</h3>
           <ul class="card__list">
